language/move-lang/tests/move_check/expansion/restricted_function_names.move
module M {
    fun address() { abort 0 }
    fun signer() { abort 0 }
    fun u8() { abort 0 }
    fun u64() { abort 0 }
    fun u128() { abort 0 }
    fun vector<T>() { abort 0 }
    fun move_to_sender() { abort 0 }
    fun move_to() { abort 0 }
    fun move_from() { abort 0 }
    fun borrow_global() { abort 0 }
    fun borrow_global_mut() { abort 0 }
    fun exists() { abort 0 }
    fun freeze() { abort 0 }
    fun assert() { abort 0 }
    fun Self() { abort 0}
}
